--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.1.1",
     "recoil": "^0.7.6",
     "web-vitals": "^2.1.4"
   },
